[package]
name = "pallet-cccp-fast-transfer"
version = "1.0.0"
description = "A pallet for CCCP-V2 (Cross-Chain Communication Protocol) Fast Transfer"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# General
hex = { workspace = true }
log = { workspace = true }
array-bytes = { workspace = true }

# Substrate
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
