[package]
name = "pallet-relay-manager"
version = "1.0.0"
description = "relayer pallet for management of cross-chain relaying and price feed collections"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }

# Bifrost
bp-btc-relay = { workspace = true }
bp-staking = { workspace = true }

[dev-dependencies]
similar-asserts = { workspace = true }

pallet-balances = { workspace = true, features = ["insecure_zero_ed", "std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"sp-staking/std",
	"pallet-session/std",
	"bp-staking/std",
	"bp-btc-relay/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
