[package]
name = "pallet-relay-manager"
version = "1.0.0"
description = "relayer pallet for management of cross-chain relaying and price feed collections"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { workspace = true }

# Substrate
scale-info = { workspace = true }
parity-scale-codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }
pallet-membership = { workspace = true }

# Bifrost
bp-btc-relay = { workspace = true }
bp-staking = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }
bp-core = { workspace = true }
pallet-btc-registration-pool = { workspace = true }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-staking/std",
    "pallet-membership/std",
    "bp-staking/std",
    "bp-btc-relay/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "bp-btc-relay/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-btc-registration-pool/runtime-benchmarks"
]