[package]
name = "precompile-balance"
version = "1.0.0"
description = "A precompile that creates pallet balance accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }

# BIFROST
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
pallet-balances = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.10"

# Substrate
pallet-timestamp = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
]
