[package]
name = "precompile-bfc-offences"
version = "1.0.0"
description = "A precompile that creates pallet bfc offences accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Bifrost
pallet-bfc-offences = { workspace = true }
precompile-utils = { workspace = true }
bp-staking = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-staking = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-bfc-offences/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-staking/std",
	"bp-staking/std",
]
