[package]
name = "precompile-bfc-staking"
version = "1.0.0"
description = "A precompile that creates pallet bfc staking accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
num_enum = { workspace = true }
rustc-hex = { workspace = true }

# BIFROST
pallet-bfc-staking = { workspace = true }
bp-staking = { workspace = true }
precompile-utils = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

[dev-dependencies]
derive_more = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }

# Substrate
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
scale-info = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-bfc-staking/std",
	"bp-staking/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"bp-staking/std",
]
