[package]
name = "precompile-bfc-staking"
version = "1.0.0"
description = "A precompile that creates pallet bfc staking accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Bifrost
pallet-bfc-staking = { workspace = true }
bp-staking = { workspace = true }
precompile-utils = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-bfc-staking/std",
	"pallet-evm/std",
	"bp-staking/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"bp-staking/std",
]
