[package]
name = "precompile-btc-registration-pool"
version = "1.0.0"
description = "A precompile that creates pallet-btc-registration-pool accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Bifrost
pallet-btc-registration-pool = { workspace = true }
precompile-utils = { workspace = true }
bp-btc-relay = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
fp-evm = { workspace = true }
fp-account = { workspace = true, features = ["serde"] }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"fp-account/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-btc-registration-pool/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"bp-btc-relay/std",
]
