[package]
name = "precompile-collective"
version = "1.0.0"
description = "A Precompile to make Substrate's collective related pallets accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
sha3 = { workspace = true }
num_enum = { workspace = true }

# Bifrost
precompile-utils = { workspace = true }

# Substrate
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
pallet-collective = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }

# Substrate
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-scheduler = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
scale-info = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-collective/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
