[package]
name = "precompile-governance"
version = "1.0.0"
description = "A Precompile to make Substrate's governance related pallets accessible to pallet-evm"
authors = ["bifrost-platform"]
homepage = "https://thebifrost.io"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/bifrost-platform/bifrost-node"

[dependencies]
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
sha3 = { version = "0.10", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

# BIFROST
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
frame-system = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-core = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-io = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-std = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
pallet-democracy = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
pallet-preimage = { default-features = false, git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }

# Frontier
fp-evm = { default-features = false, git = "https://github.com/dnjscksdn98/frontier", branch = "polkadot-v0.9.32" }
pallet-evm = { default-features = false, git = "https://github.com/dnjscksdn98/frontier", branch = "polkadot-v0.9.32" }

[dev-dependencies]
hex-literal = "0.3.1"
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.10"

# Substrate
pallet-balances = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
pallet-timestamp = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
pallet-scheduler = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
sp-runtime = { git = "https://github.com/dnjscksdn98/substrate", branch = "polkadot-v0.9.32" }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-democracy/std",
	"pallet-preimage/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
