[package]
name = "precompile-governance"
version = "1.0.0"
description = "A Precompile to make Substrate's governance related pallets accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
sha3 = { version = "0.10", default-features = false }
num_enum = { version = "0.5.3", default-features = false }

# BIFROST
precompile-utils = { path = "../utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
pallet-democracy = { workspace = true }
pallet-preimage = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
hex-literal = "0.3.1"
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.10"

# Substrate
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-scheduler = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-democracy/std",
	"pallet-preimage/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
]
