[package]
name = "precompile-permissions"
version = "1.0.0"
description = "A precompile that makes pallet-permissions accessible to pallet-evm"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Bifrost RWA
pallet-permissions = { path = "../../pallets/rwa/pallet-permissions", default-features = false }
pallet-pools = { path = "../../pallets/rwa/pallet-pools", default-features = false }
precompile-utils = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier / EVM
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

[features]
default = ["std"]
std = [
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-permissions/std",
	"pallet-pools/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
